# oop_project_1

./: Artifact.cpp  Artifact.h  CMakeLists.txt  Player.cpp  Player.h  README.md  help.h  main.cpp  textureLoader.cpp  textureLoader.h
